--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="grid-2">
         <div class="section-1">
             <i class="fas fa-code fa-5x white"></i>
-            <h2>Ashwini rao m</h2>
+            <h2>ASHWINI RAO M</h2>
             <p>Hassan,India.</p>
             <a href="#"><i class="fab fa-twitter"></i></a>
             <a href="#"><i class="fab fa-linkedin"></i></a>
